1. Улучшения Collection API [#283293]